--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lottie-web": "^5.12.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tw-elements": "^1.1.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
